Validation, Refactor
